# pico-projects

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE-3RD-PARTY.txt  LICENSE.txt  README.md  lwipopts_common.h
bin_unicorn/: .gitignore  CMakeLists.txt  README.md  lwipopts.h  main.cpp  mbedtls_config.h  tls_client.c  tls_client.h  util.hpp
bin_unicorn/display/: display.cpp  display.hpp
bin_unicorn/http/: config.hpp  fetch_data.cpp  fetch_data.hpp  http.cpp  http.hpp  tls_client.c  tls_client.cpp  tls_client.h  tls_client.hpp
bin_unicorn/parsing/: parsing.cpp  parsing.hpp
morsecode/: CMakeLists.txt  LEDRenderer.cpp  LEDRenderer.hpp  LEDRendererW.cpp  LEDRendererW.hpp  MorseRenderer.cpp  MorseRenderer.hpp  README.md  main.cpp
